fixed links overlap

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -34,6 +34,7 @@
 .project-description {
     line-height: 1.2lh;
     white-space: pre-wrap;
+    margin-bottom: 1rem;
 }
 
 .links {
